tests/macros/checkbox/plugin.stderr
error: option `plugin` does not exist for kind `checkbox`
 --> $DIR/plugin.rs:2:46
  |
2 |     let q = discourse::questions![Checkbox { plugin: todo!() }];
  |                                              ^^^^^^
