tests/macros/checkbox/plugin.rs
fn main() {
    let q = discourse::questions![Checkbox { plugin: todo!() }];
}
